Update atom-spotified-view with Etch

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "atom": ">=1.0.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "dom-listener": "^0.1.2",
+    "etch": "^0.6.0",
     "spotify-node-applescript": "^0.2.2"
   },
   "devDependencies": {
